crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__py314__RUF058_RUF058_2.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF058 [*] `itertools.starmap` called on `zip` iterable
 --> RUF058_2.py:5:1
  |
4 | # Errors in Python 3.14+
5 | starmap(func, zip(a, b, c, strict=True))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 | starmap(func, zip(a, b, c, strict=False))
7 | starmap(func, zip(a, b, c, strict=strict))
  |
help: Use `map` instead
  |
5 - starmap(func, zip(a, b, c, strict=True))
5 + map(func, a, b, c, strict=True)
  |

RUF058 [*] `itertools.starmap` called on `zip` iterable
 --> RUF058_2.py:6:1
  |
4 | # Errors in Python 3.14+
5 | starmap(func, zip(a, b, c, strict=True))
6 | starmap(func, zip(a, b, c, strict=False))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 | starmap(func, zip(a, b, c, strict=strict))
  |
help: Use `map` instead
  |
6 - starmap(func, zip(a, b, c, strict=False))
6 + map(func, a, b, c, strict=False)
  |

RUF058 [*] `itertools.starmap` called on `zip` iterable
 --> RUF058_2.py:7:1
  |
5 | starmap(func, zip(a, b, c, strict=True))
6 | starmap(func, zip(a, b, c, strict=False))
7 | starmap(func, zip(a, b, c, strict=strict))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Use `map` instead
  |
7 - starmap(func, zip(a, b, c, strict=strict))
7 + map(func, a, b, c, strict=strict)
  |
